--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "svelte-experiments",
+  "name": "meds",
   "version": "0.0.1",
-  "description": "Some svelte experiments",
+  "description": "Manage a list of medications and get renewal alarms",
   "main": "index.js",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
     "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.18.0",
     "babel-register": "6.18.0",
+    "magic-types": "github:magic/types",
     "nodemon": "1.11.0",
     "svelte-loader": "1.1.0",
     "webpack": "2.1.0-beta.27",
