--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "nodemon --watch build server",
-    "bundle": "NODE_ENV=production webpack --config config/webpack.config.js",
+    "start": "nodemon --watch config --watch server server",
+    "bundle": "NODE_ENV=production webpack --config config/webpack.config.js && npm run zip",
     "clean": "rm -r bundle",
-    "zip": "zopfli bundle/*.js"
+    "zip": "rm public/*.gz && zopfli public/*"
   },
   "license": "AGPL-v3",
   "devDependencies": {
@@ -16,7 +16,10 @@
     "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.18.0",
     "babel-register": "6.18.0",
+    "babili-webpack-plugin": "0.0.7",
+    "compression-webpack-plugin": "0.3.2",
     "magic-types": "github:magic/types",
+    "node-zopfli": "2.0.2",
     "nodemon": "1.11.0",
     "svelte-loader": "1.1.0",
     "webpack": "2.1.0-beta.27",
