--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon --watch config --watch server server",
     "bundle": "NODE_ENV=production webpack --config config/webpack.config.js && npm run zip",
     "clean": "rm -r bundle",
-    "zip": "rm public/*.gz && zopfli public/*"
+    "zip": "rm public/*.gz && zopfli public/*",
+    "server": "NODE_ENV=production node server"
   },
   "license": "AGPL-v3",
   "devDependencies": {
