--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "scripts": {
     "start": "nodemon --watch config --watch server server",
-    "bundle": "NODE_ENV=production webpack --config config/webpack.config.js && npm run zip",
-    "clean": "rm -r bundle",
-    "zip": "rm public/*.gz && zopfli public/*",
+    "bundle": "npm run clean && NODE_ENV=production webpack --config config/webpack.config.js && npm run zip",
+    "clean": "rm -rf public/js public/*.gz public/**/*.gz",
+    "zip": "rm -f public/*.gz public/**/*.gz && zopfli public/*.* public/**/*.*",
     "server": "npm run bundle && NODE_ENV=production node server"
   },
   "license": "AGPL-v3",
