add publish task

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "bundle": "npm run clean && NODE_ENV=production webpack --config config/webpack.config.js && npm run zip",
     "clean": "rm -rf public/js public/*.gz public/**/*.gz",
     "zip": "rm -f public/*.gz public/**/*.gz && zopfli public/*.* public/**/*.*",
-    "server": "npm run bundle && NODE_ENV=production node server"
+    "server": "npm run bundle && NODE_ENV=production node server",
+    "publish": "npm run bundle && git subtree push --prefix public origin gh-pages"
   },
   "license": "AGPL-v3",
   "devDependencies": {
