update scripts, add serve-favicon

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "npm run clean && nodemon --watch config --watch server server",
-    "bundle": "npm run clean && NODE_ENV=production webpack --config config/webpack.config.js && npm run zip",
+    "start": "nodemon --watch config --watch server server",
+    "bundle": "npm run build && npm run zip",
+    "build": "NODE_ENV=production webpack --config config/webpack.config.js",
     "clean": "rm -rf public/js public/*.gz public/**/*.gz",
     "zip": "rm -f public/*.gz public/**/*.gz && zopfli public/*.* public/**/*.*",
     "server": "npm run bundle && NODE_ENV=production node server",
@@ -23,6 +24,7 @@
     "magic-types": "github:magic/types",
     "node-zopfli": "2.0.2",
     "nodemon": "1.11.0",
+    "serve-favicon": "2.3.2",
     "svelte-loader": "1.1.0",
     "webpack": "2.1.0-beta.27",
     "webpack-dev-middleware": "1.9.0",
